# openweather-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml  build-and-test.yml  codeql.yml
docs/: openapi-spec.yml
scripts/: docker-entrypoint.sh  wait-for-it.sh
src/: manage.py
src/loader/: city_loader.py  weather_loader.py
src/locale/bn/LC_MESSAGES/: django.po
src/locale/de/LC_MESSAGES/: django.po
src/openweather/: __init__.py  client.py  exceptions.py  items.py
src/templates/: swagger-ui.html
src/utils/: openweathermap.py
src/weather_wise/: asgi.py  settings.py  swagger_view.py  urls.py  wsgi.py
src/weatherapp/: admin.py  items.py  managers.py  models.py  tests.py  urls.py  views.py
src/weatherapp/management/commands/: populate_contries.py  populate_weathers.py
src/weatherapp/migrations/: 0001_initial.py
src/weatherapp/tests/: example_response.py  test_models.py  test_view.py
